Implement cleaner in remaining algorithms
Removes the deprecated finalize() method from the non key algorithms and
implements a runnable function to handle native memory cleanup in their
places.

Signed-off-by: Sabrina Lee <sabrinalee@ibm.com>