@@ -8,6 +8,7 @@
 
 package ibm.security.internal.spec;
 
+import com.ibm.crypto.plus.provider.OpenJCEPlusProvider;
 import java.security.spec.KeySpec;
 import java.util.Arrays;
 
@@ -18,6 +19,7 @@ import java.util.Arrays;
  * new PQC algs the bytes are defined as byte arrays.
  */
 public class RawKeySpec implements KeySpec {
+    private OpenJCEPlusProvider provider;
     private byte[] keyBytes = null;
     /**
      * @param key contains the key as a byte array
@@ -33,9 +35,23 @@ public class RawKeySpec implements KeySpec {
         return keyBytes.clone();
     }
 
-    protected void finalize() throws Throwable {
-        if (keyBytes != null) {
-            Arrays.fill(keyBytes, 0, keyBytes.length, (byte) 0);
-        }
+    public void registerToCleaner(OpenJCEPlusProvider provider) {
+        this.provider = provider;
+        this.provider.registerCleanable(this, cleanOCKResources(keyBytes));
+    }
+
+    private Runnable cleanOCKResources(byte[] keyBytes) {
+        return() -> {
+            try {
+                if (keyBytes != null) {
+                    Arrays.fill(keyBytes, 0, keyBytes.length, (byte) 0);
+                }
+            } catch (Exception e) {
+                if (OpenJCEPlusProvider.getDebug() != null) {
+                    OpenJCEPlusProvider.getDebug().println("An error occurred while cleaning : " + e.getMessage());
+                    e.printStackTrace();
+                }
+            }
+        };
     }
 }
